<resources>
    <string name="app_name">HelloWorld</string>
    <string name="hello__Text">我是彭于晏</string>
    <string name="logo">Android</string>
    <string name="login">登录</string>
    <string name="text">你好，世界</string>
    <string name="user">请输入账号</string>
    <string name="password">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="password_crean">登录密码</string>
    <string name="phone">手机号/邮箱</string>
    <string name="jie">接受消息推送</string>
    <string name="tong">同意本软件的用户服务协议和隐私政策</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="chu">%</string>
    <string name="gou">✔</string>
    <string name="C">C</string>
    <string name="DEL">DEL</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="jian">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="jia">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="chuhao">➗</string>
    <string name="乘号">✖</string>
    <string name="dengyu">=</string>
    <string name="dian">.</string>
    <string name="zero">0</string>
    <string name="Nine_tail_Fox">九尾妖狐</string>
    <string name="ALi">阿狸</string>
    <string name="Master">法师</string>
    <string name="Assassin">刺客</string>
    <string name="Physical_attack">物理攻击</string>
    <string name="Magic_attack">魔法攻击</string>
    <string name="defensive">防御能力</string>
    <string name="Difficulty">上手难度</string>
    <string name="botton_left">左边</string>
    <string name="botton_right">右边</string>
    <string name="botton_ok">确定</string>
    <string name="button_switch">开关</string>
    <string name="radio_apple">Apple</string>
    <string name="etic_number">请输入数值</string>
    <string name="java">Java</string>
    <string name="sql">SQL</string>
    <string name="todo">TODO</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="appraise">星评价</string>
    <string name="ok_hint">请先填写数值，再点击确定</string>
    <string name="todo">TODO</string>
</resources>
